--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -2,7 +2,6 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -48,55 +47,90 @@ table {
 }
 /** end reset css**/
 body {
-	max-width: 1140px;
-	margin:auto;
-	font-family: 'Work Sans' ;
+	background-color: #FFFEF8;
+	margin: auto;
+	font-family: 'Work Sans';
 	font-size: 14px;
 }
-header {
-	display: flex;
-	justify-content: space-between;
-	margin: 50px 0
+main {
+	max-width: 1024px;
+	margin: auto;
 }
-section {
-	margin: 50px 0
-}
-
 h1{
 	display: flex;
 	flex-direction: column;
 	font-family: 'Syne';
 	font-size: 22px;
 	font-weight: 800;
-	color: #B1663C
+	color: #B1663C;
 }
-
 h1 > span {
 	font-family: 'Work Sans';
 	font-size:10px;
 	letter-spacing: 0.1em;
-;
 }
-
-h2{
+h2 {
 	font-family: 'Syne';
 	font-weight: 700;
 	font-size: 30px;
 	color: #1D6154
 }
+h3 {
+	font-size: 26px;
+	line-height: 30px;
+}
+/* Pour le banner en mode edition */
+.banner {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #000;
+	color: #FFF;
+	height: 59px;
+}
+.banner p {
+	padding-left: 12.3px;
+	padding-right: 21px;
+}
+.banner button{
+	background-color: #FFF;
+	border: none;
+	color: #000;
+	border-radius: 60px;
+	min-width: 100px;
+	font-family: 'work sans';
+	font-size: 14px;
+	font-weight: 500;
+	line-height: 16px;
+	text-align: center;
+	padding: 11px 23px;
+}
+
+header {
+	display: flex;
+	justify-content: space-between;
+	margin: 50px auto;
+	width: 80%;
+}
 nav ul {
 	display: flex;
 	align-items: center;
 	list-style-type: none;
-
+	
 }
 nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
 }
-
-li:hover {
+nav li a {
+	color: black;
+	text-decoration: none;
+}
+li:hover, li a:hover {
 	color: #B1663C;
+}
+#main-login {
+	margin-bottom: 355px;
 }
 #introduction {
 	display: flex;
@@ -107,24 +141,69 @@ li:hover {
 }
 #introduction img {
 	display: block;
-	margin: auto;
-	width: 80%;
+	width: 90%;
 }
-
 #introduction article {
 	flex: 1
 }
 #introduction h2 {
 	margin-bottom: 1em;
 }
-
 #introduction p {
 	margin-bottom: 0.5em;
+}
+#introduction figcaption {
+	padding-top: 15px;
+	width: 80%;
+}
+#portfolio {
+	margin: 50px auto;
+	width: 100%;
 }
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1em;
 }
+
+#portfolio .loggedIn {
+	display: inline;
+	margin-left: 20px;
+	color: #000;
+	font-family: 'Work Sans';
+	font-size: 14px;
+}
+
+#portfolio #linkModal {
+	cursor: pointer;
+}
+
+/* css pour les boutons */
+.filter {
+	display: flex;
+	justify-content: center;
+	gap: 10px;
+	margin-bottom: 40px;
+}
+.filter button {
+	background-color: #FFFEF8;
+	border: 1px solid #1D6154;
+	color: #1D6154;
+	border-radius: 60px;
+	min-width: 100px;
+	font-family: Syne;
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 19px;
+	letter-spacing: 0em;
+	text-align: center;
+	padding: 9px;
+}
+
+.filter .btnFilled {
+	background-color: #1D6154;
+	color: #FFF;
+}
+
 .gallery {
 	width: 100%;
 	display: grid;
@@ -135,22 +214,22 @@ li:hover {
 
 .gallery img {
 	width: 100%;
-
 }
+
 #contact {
 	width: 50%;
-margin: auto;
+	margin: auto;
 }
 #contact > * {
 	text-align: center;
-
+	
 }
 #contact h2{
 	margin-bottom: 20px;
 }
 #contact form {
 	text-align: left;
-	margin-top:30px;
+	margin-top: 30px;
 	display: flex;
 	flex-direction: column;
 }
@@ -160,6 +239,7 @@ margin: auto;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	padding-left: 10px;
 }
 #contact label {
 	margin: 2em 0 1em 0;
@@ -167,9 +247,10 @@ margin: auto;
 #contact textarea {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	padding-left: 10px;
+	padding-top: 10px;
 }
-
-input[type="submit"]{
+#contact input[type="submit"]{
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
@@ -179,10 +260,221 @@ input[type="submit"]{
 	text-align: center;
 	border-radius: 60px ;
 }
-
-footer nav ul {
+.error {
+	margin-top: 30px;
+	color: #D65353;
+}
+footer {
+	background-color: #FFF;
+	height: 60px;
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em
+	align-items: center;
+	margin-right: 107px;
 }
 
+/* Je stylise mon modale */
+.modal {
+	position: fixed;
+	align-items: center;
+	justify-content: center;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.3);
+	animation: fadeIn .3s both;
+}
+
+.modal-container {
+	background-color: #FFF;
+	width: 630px;
+	max-width: calc(100vw - 20px);
+	max-height: calc(100vh - 50px);
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.modal-close-btn, .modal-return-btn {
+	position: relative;
+	left: 260px;
+	top: 20px;
+	background-color: #FFF;
+	border: none;
+}
+
+.modal-return-btn {
+	left: -260px;
+	top: 35px;
+}
+.modal-container h3 {
+	padding: 40px 0;
+}
+.galleryModal {
+	display: flex;
+	flex-wrap: wrap;
+	overflow: auto;
+	gap: 10px;
+	width: 455px;
+	border-bottom: 1px solid #A7A7A7;
+	margin-bottom: 20px;
+	padding-bottom: 40px;
+}
+.gallery-modal-work {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	position: relative;
+}
+.gallery-modal-work img {
+	display: block;
+	width: 80px;
+	height: 103px;
+	margin-bottom: 5px;
+}
+.gallery-modal-work i {
+	position: absolute;
+	right: 5px;
+	top: 5px;
+	background-color: #000;
+	color: #E8F1F7;
+	padding: 3px;
+	border-radius: 2px;
+}
+hr {
+	width: 445px;
+	height: 1px;
+	background-color: #B3B3B3;
+	border: none;
+	margin-bottom: 40px;
+}
+.btn-ajouter, .btn-supprimer, .btn-valider {
+	background-color: #1D6154;
+	color: #FFF;
+	border: none;
+	border-radius: 60px;
+	font-family: Syne;
+	font-size: 16px;
+	font-weight: 700;
+	text-align: center;
+	width: 237px;
+	height: 36px;
+}
+
+.btn-supprimer{
+	color: #D65353;
+	background-color: #FFF;
+	border: none;
+	margin-bottom: 30px;
+}
+
+@keyframes fadeIn {
+	from {opacity: 0;}
+	to {opacity: 1;}
+}
+@keyframes fadeOut {
+	from {opacity: 1;}
+	to {opacity: 0;}
+}
+
+
+
+
+
+/* ------------------------------------------------------------- */
+
+#formAddImage {
+	font-family: 'Work Sans';
+	width: 100%;
+}
+
+.image-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background: #E8F1F7;
+	border-radius: 3px;
+	width: auto;
+}
+
+.image-container img {
+	width: 58px;
+	margin: 20px;
+	color: #B9C5CC;
+	align-self: center;
+}
+
+#image-restriction {
+	font-size: 10px;
+	text-align: center;
+	margin: 10px 0 20px 0;
+	color: #444444;
+	padding-top: 10px;
+}
+input[type="file"]{
+	display: none;
+}
+
+.title, .category {
+	display: flex;
+	flex-direction: column;
+	margin: 25px 5px;
+}
+
+.title label, .category label {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	color: #3D3D3D;
+	margin-bottom: 10px;
+}
+
+ .title input, .category input {
+	font-size: 14px;
+	color: #444444;
+} 
+
+.category {
+	padding-bottom: 40px;
+	border-bottom: 1px solid #A7A7A7;
+}
+
+.category select {
+	font-size: 14px;
+	color: #444444;
+}
+
+#category,
+#input-title {
+	background: #FFFFFF;
+	border: none;
+	padding: 20px 10px;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+input[type="submit"] {
+	margin-top: 25px;
+	margin-left: 110px;
+	background-color: #A7A7A7;
+}
+
+.file-label {
+	background: #CBD6DC;
+	color: #306685;
+	text-align: center;
+	border-radius: 50px;
+	cursor: pointer;
+	padding: 10px 30px;
+}
+
+#fileImg {
+	margin: 0;
+	height: 169px;
+	width: 129px;
+}
+
+.hidden {
+	display: none;
+}
