--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -81,7 +81,7 @@ h3 {
 }
 /* Pour le banner en mode edition */
 .banner {
-	display: flex;
+	display: none;
 	justify-content: center;
 	align-items: center;
 	background-color: #000;
@@ -142,6 +142,7 @@ li:hover, li a:hover {
 #introduction img {
 	display: block;
 	width: 90%;
+	margin-bottom: 15px;
 }
 #introduction article {
 	flex: 1
@@ -151,10 +152,6 @@ li:hover, li a:hover {
 }
 #introduction p {
 	margin-bottom: 0.5em;
-}
-#introduction figcaption {
-	padding-top: 15px;
-	width: 80%;
 }
 #portfolio {
 	margin: 50px auto;
@@ -173,10 +170,14 @@ li:hover, li a:hover {
 	font-size: 14px;
 }
 
-#portfolio #linkModal {
+#portfolio .link-modal {
+	display: none;
 	cursor: pointer;
 }
-
+.link-modal-intro {
+	display: none;
+	margin-top: 20px;
+}
 /* css pour les boutons */
 .filter {
 	display: flex;
