modale implantez avec recuperation des images et fermeture sur x ou a cote de la modale

--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -276,6 +276,7 @@ footer {
 
 /* Je stylise mon modale */
 .modal {
+	display: none;
 	position: fixed;
 	align-items: center;
 	justify-content: center;
