--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -312,7 +312,7 @@ footer {
 	top: 35px;
 }
 .modal-container h3 {
-	padding: 40px 0;
+	padding: 20px 0 30px 0;
 }
 .galleryModal {
 	display: flex;
@@ -388,8 +388,7 @@ hr {
 /* ------------------------------------------------------------- */
 
 #formAddImage {
-	font-family: 'Work Sans';
-	width: 100%;
+	width: 75%;
 }
 
 .image-container {
@@ -408,6 +407,10 @@ hr {
 	align-self: center;
 }
 
+input[type="file"]{
+	display: none;
+}
+
 #image-restriction {
 	font-size: 10px;
 	text-align: center;
@@ -415,14 +418,11 @@ hr {
 	color: #444444;
 	padding-top: 10px;
 }
-input[type="file"]{
-	display: none;
-}
 
 .title, .category {
 	display: flex;
 	flex-direction: column;
-	margin: 25px 5px;
+	margin-top: 15px;
 }
 
 .title label, .category label {
@@ -457,8 +457,8 @@ input[type="file"]{
 }
 
 input[type="submit"] {
-	margin-top: 25px;
-	margin-left: 110px;
+	display: block;
+	margin: 25px auto 45px auto;
 	background-color: #A7A7A7;
 }
 
@@ -477,6 +477,3 @@ input[type="submit"] {
 	width: 129px;
 }
 
-.hidden {
-	display: none;
-}
