--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -264,6 +264,7 @@ li:hover, li a:hover {
 .error {
 	margin-top: 20px;
 	color: #D65353;
+	text-align: center;
 }
 footer {
 	background-color: #FFF;
